--- a/static/style.css
+++ b/static/style.css
@@ -46,10 +46,14 @@ body {
 }
 
 .menu a {
-  color: #b2d4dc;
+  color: #f4f4f4;
   font-size: 15px;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.menu small {
+  color: #b2d4dc;
 }
 
 .icon-close {
@@ -103,4 +107,19 @@ body {
   margin-bottom: 10px;
   word-wrap: break-word;
   min-height: 42px;
+}
+
+.article {
+  color: #b3d4dc;
+  border-radius: 5px;
+  background: #3e6372;
+  border-spacing: 2px;
+  border-color: gray;
+  border: 1px #e5e5e5 solid;
+  font-size: 18px;
+}
+.item {
+  cursor: pointer;
+  padding-top: 7px;
+  padding-bottom: 7px;
 }
